# rowland-sdk

./: .gitignore  LICENSE  README.md  mise.toml
.github/workflows/: ci.yaml  lint-and-test.yaml  publish.yaml
dotnet/: .editorconfig
dotnet/DocumentsApi.Sdk/: DocumentsApi.Sdk.csproj
dotnet/DocumentsApi.Sdk.Example/: DocumentsApi.Sdk.Example.csproj  Program.cs
dotnet/DocumentsApi.Sdk/Clients/: Client.cs
dotnet/DocumentsApi.Sdk/Models/: Document.cs  DocumentExtractionResponse.cs  DocumentStatus.cs  DocumentTypes.cs  PaginatedResponse.cs
python/: README.md  pyproject.toml
python/src/rowland/: __init__.py  client.py  models.py
python/tests/integration/: conftest.py  test_documents_api_integration.py
